# AgentScopeInitialzr

./: .dockerignore  .gitignore  ARM64-ARCHITECTURE-ANALYSIS.md  ARM64-CLEANUP-SUMMARY.md  ARM64-DEPLOYMENT.md  ARM64-VERIFICATION-GUIDE.md  BACKEND_IMPROVEMENTS.md  DOCKER_DEPLOYMENT.md  DOCS_REORGANIZATION.md  DOWNLOAD_AND_PREVIEW_FEATURES.md  Dockerfile  EXTENSIONS_USER_GUIDE.md  FRONTEND_DESIGN_VS_IMPLEMENTATION.md  FRONTEND_LAYOUT_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_SUMMARY.md  LICENSE  PROJECT_STRUCTURE_FIXES.md  QUICKSTART.md  README-ARM64.md  README.md  REQUIREMENTS_COMPREHENSIVE_REVIEW.md  UI_VISUAL_COMPARISON.md  UPGRADE_GUIDE.md  agentscope.service  build_docker.py  check-arm64-dependencies.sh  deploy-arm64.sh  deploy.sh  diagnose-docker.sh  docker-build.sh  docker-compose.yml  docker-run.sh  docker-verify.sh  download_offline_packages.bat  download_packages.bat  download_packages.py  health-check.sh  pip_sources.ini  pyproject.toml  (+11 more)
initializr-web/: README.md  pyproject.toml
initializr-web/frontend/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
initializr-web/frontend/src/: App.vue
initializr-web/frontend/src/api/: client.ts  index.ts
initializr-web/frontend/src/components/: BasicSettings.vue  BenchmarkSettings.vue  ConfigNavigation.vue  ConfigPreviewPanel.vue  ConfigurationForm.vue  EvaluationSettings.vue  ExtensionsSettings.vue  FormatterSettings.vue  HooksSettings.vue  KnowledgeBaseSettings.vue  MemorySettings.vue  ModelSettings.vue  OpenJudgeSettings.vue  PipelineSettings.vue  RagasEvaluationSettings.vue  SkillSelector.vue  SkillSettings.vue  TemplateSelector.vue  TestGenerationSettings.vue  TestingSettings.vue
initializr-web/frontend/src/router/: index.ts
initializr-web/frontend/src/stores/: config.ts
initializr-web/frontend/src/types/: index.ts
initializr-web/frontend/src/views/: Configure.vue  Home.vue  SkillManagement.vue
initializr-web/initializr_web/: __init__.py  __main__.py  api.py  converter.py  generator.py  main.py  models.py  skill_manager.py
initializr-web/initializr_web/router/: __init__.py  extensions.py  health.py  models.py  projects.py  skills.py  templates.py
initializr-web/initializr_web/static/: index.html
initializr-web/initializr_web/static/assets/: Configure-096LxGPl.js  Configure-B88OLEgS.css  Configure-BAs6U9RL.css  Configure-BIwOvQqc.js  Configure-BJa8Irty.js  Configure-BMXOLEzS.css  Configure-BhikjPi0.js  Configure-BqbTl1pl.css  Configure-C0wJZN_y.js  Configure-C7Nsd8Ay.js  Configure-C8hMmhhY.css  (+71 more)
initializr-web/tests/: test_api.py  test_e2e.py  test_generator_bugs.py  test_integration.py  test_models.py
output/test-agent/: .env.example  README.md  pyproject.toml  requirements.txt
output/test-agent/docs/: architecture.md
output/test-agent/examples/: advanced_multiagent.py  basic_usage.py
output/test-agent/scripts/: deploy.sh
(+103 files in other folders)
