[project]
name = "test-agent"
version = "0.1.0"
description = "Test agent"
requires-python = ">=3.11"
dependencies = [
    "agentscope>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
